2006-01-20  Vlad Seryakov  <seryakov@users.sf.net>

	* tcl/stats.tcl: fixed all bugs and it runs now under naviserver
	properly
	* m4/tcl.m4: check for USE_THREAD_ALLOC in tclConfig.sh
	* Makefile: simplify installation  structure, create conf/, logs/,
	tcl/ directories.
	* sample-config.tcl: re-formatted and make it run, added more
	descriptions
	* contrib/nsd.tcl:
	* contrib/mimetypes.tcl: added new example configs
	* include/Makefile.global.in: chanage to simpler installation 
	structure
	* contrib/index.adp: Added default index page

2006-01-19  Vlad Seryakov  <seryakov@users.sf.net>

	* include/ns.h:
	* nsd/driver.c: Fixed bug in Ns_DriverSockRequest when existing 
	structure is used. Returns NS_ERROR now if cannot parse given url. 

2006-01-18  Vlad Seryakov  <seryakov@users.sf.net>

	* sample-config.tcl: Added spooler/writer related options
	* nsd/driver.c:
	* nsd/nsd.h: Rewrote driver's spooler/writer support
	to make them cleaner and to support multiple spooler/writer
	threads for each driver. Before that, global spooler variables
	got overwritten if multiple drivers are loaded. Also, 
	simplified driver thread, removed rotating driver's list, in 
	case of usual one driver operation that was just waste of CPU
	cycles. For multiple drivers, spawning separate thread for each
	would be better solution, it can be considered for future driver 
	encancements.

2006-01-17  Vlad Seryakov  <seryakov@users.sf.net>

	* nsd/driver.c: Improved Writer thread support, now it is 
        possible to have multiple writer thread for better performance.
        * nstread/thread.c: Make Ns_ThreadSetName to accept sprintf-like 
        variable list of arguments
	* nsd/sched.c:
	* nsd/tcljob.c
	* nsd/queue.c:
	* nsd/task.c: Changed setting thread name using new sprintf-like
	arguments

2006-01-16  Bernd Eidenschink  <eide@users.sourceforge.net>

	* tests/ns_base64encode.test: Basic tests for ns_base64encode
	and ns_base64decode