@@ -1,5 +1,7 @@
 2006-01-20  Vlad Seryakov  <seryakov@users.sf.net>
 
+	* tcl/file.tcl: Changes to use new cache API
+	* tcl/util.tcl: Added ns_fileread/ns_filewrite procs
 	* tcl/stats.tcl: fixed all bugs and it runs now under naviserver
 	properly
 	* m4/tcl.m4: check for USE_THREAD_ALLOC in tclConfig.sh
